--- a/release.yml
+++ b/release.yml
@@ -3,8 +3,8 @@ name: Create Release
 on:
   push:
     branches:
-      - master
       - main
+      - master
 
 permissions:
   contents: write
@@ -16,21 +16,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Generate Token
-        id: generate_token
-        uses: actions/create-github-app-token@v1
-        with:
-          app-id: ${{ secrets.MOTOIL_APP_ID }}
-          private-key: ${{ secrets.MOTOIL_APP_PRIVATE_KEY }}
-          owner: ${{ github.repository_owner }}
-
-      - name: Download Libs from GitHub Release
-        run: |
-          mkdir -p libs-bin
-          gh release download --repo motoil-nn-ru/libs --pattern "*.jar" --dir libs-bin
-        env:
-          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
-
       - name: Set up JDK 25
         uses: actions/setup-java@v4
         with:
@@ -38,13 +23,14 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
 
-      - name: Build with Gradle
+      - name: Build and Publish to Nexus
         run: |
           chmod +x gradlew
-          ./gradlew bootJar \
-            -PmotulNexusUrl="https://repo.maven.apache.org/maven2" \
-            -PmotulNexusUser="none" \
-            -PmotulNexusPassword="none" \
+          ./gradlew publish \
+            -PmotulNexusUrl="https://nexus.motoil-nn.ru/repository/maven-public/" \
+            -PmotulNexusPublishingUrl="https://nexus.motoil-nn.ru/repository/maven-releases/" \
+            -PmotulNexusUser="${{ secrets.CI_NEXUS_USER }}" \
+            -PmotulNexusPassword="${{ secrets.CI_NEXUS_PASSWORD }}" \
             -x test
 
       - name: Extract version
@@ -59,7 +45,7 @@ jobs:
           tag_name: v${{ steps.get_version.outputs.project_version }}
           name: Release ${{ steps.get_version.outputs.project_version }}
           files: |
-            **/build/libs/*[!plain].jar
+            **/build/libs/*.jar
           body: |
-            Автоматический релиз сервиса ${{ github.event.repository.name }}.
+            Версия проекта: **${{ steps.get_version.outputs.project_version }}**
           generate_release_notes: true
